# tinytapeout-sky-25a-sources

./: README.md  shuttle_index.json
.github/workflows/: reharden.yaml
tt_um_3v_inverter_SiliconeGuide/mag/: Makefile  double_inverter.mag  sky130_fd_pr__nfet_g5v0d10v5_AWMRGD.mag  (+4 more)
tt_um_7FM_ShadyPong/: .gitmodules
tt_um_BMSCE_T2/: README.md
tt_um_BNN/: README.md
tt_um_FFT_engine/: README.md
tt_um_LIF_neuron/: README.md
tt_um_LPCAS_TP1/: README.md
tt_um_andyshor_demux/: README.md
tt_um_betz_morse_keyer/: README.md
tt_um_diff/: README.md
tt_um_dteal_awg/: README.md
tt_um_edwintorok/: .gitignore  env.sh
tt_um_gray_sobel/: .gitignore
tt_um_htfab_split_flops/: README.md
tt_um_jonathan_thing_vga/: .gitignore  README.md
tt_um_limpix31_r0/: .gitignore  README.md
tt_um_limpix31_r0/demo/: CMakeLists.txt  main.cpp
tt_um_marxkar_jtag/: CREDITS.md
tt_um_myprocessor/: README.md
tt_um_nitelich_conway/: README.md
tt_um_rebeccargb_dipped/: README.md
tt_um_rebeccargb_intercal_alu/: README.md
tt_um_rebeccargb_styler/: README.md
tt_um_rebeccargb_universal_decoder/: README.md
tt_um_rebelmike_incrementer/: .gitignore
tt_um_rebelmike_register/: .gitignore
tt_um_rejunity_lgn_mnist/: TRAINING_PARAMS.txt
tt_um_richardgonzalez_ped_traff_light/: .info.yaml.swp
tt_um_simonsays/: README.md
tt_um_swangust/: README.md
tt_um_swangust2/: README.md
tt_um_top_layer/: Makefile  README.md
tt_um_trivium_stream_processor/: README.md
tt_um_virantha_enigma/: README.md
tt_um_voting_machine/: README.md
tt_um_wokwi_441835796137492481/: README.md
(+1244 files in other folders)
